Corrected and update apidocs
