# services/FileService/swagger_masterfile.yml
@@ -25,51 +25,104 @@ securityDefinitions:
 paths:
   /files:
     get:
-      operationId: get_files
-      tags:
-        - files
       summary: Read the entire list of files
       description: Access to all files
       security:
         - Bearer: []
+      operationId: get_files
+      tags:
+        - files
+      parameters:
+        - name: userid
+          in: header
+          description: user name
+          required: true
+          type: string
+        - name: include
+          in: query
+          description: all for own and shared files, own for only shared, shared for only files from other users
+          required: false
+          type: string
       responses:
         200:
-          description: Successfully got file list
+          description: dictionary with to lists of fileobject-descriptions
           schema:
-            type: array
-            items:
-              type: object
-              properties:
-                name:
-                  type: string
-                size:
-                  type: integer
-                upload_date:
-                  type: string
-                id:
-                  type: integer
-                user:
-                  type: string
-
+            type: object
+            properties:
+              own_files:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    size:
+                      type: integer
+                    upload_date:
+                      type: string
+                    id:
+                      type: integer
+                    user:
+                      type: string
+                    shared_with:
+                      type: array
+                      items:
+                        type: integer
+              shared_files:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    size:
+                      type: integer
+                    upload_date:
+                      type: string
+                    id:
+                      type: integer
+                    user:
+                      type: string
+                    shared_with:
+                      type: array
+                      items:
+                        type: integer
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden- insufficient access rights
 
     post:
+      summary: Add a new file
+      description: Add a new file
+      security:
+        - Bearer: []
       operationId: add_file
       tags:
         - files
-      summary: Add a new file
-      description: Add a new file
       consumes:
         - multipart/form-data
-      security:
-        - Bearer: []
       parameters:
+        - name: userid
+          in: header
+          description: user name
+          required: true
+          type: string
+        - name: shared_with
+          in: formData
+          description: array of users this file is accessable to
+          required: false
+          type: array
+          items:
+            type: integer
+          uniqueItems: true
         - name: file_content
           in: formData
           type: file
           description: File to create
           required: true
       responses:
-        202:
+        201:
           description: Successfully created file
           schema:
             properties:
@@ -83,21 +136,36 @@ paths:
                 type: integer
               user:
                 type: string
-  /files/{id}:
+              shared_with:
+                type: array
+                items:
+                  type: integer
+        400:
+          description: Missing/empty file object
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden- insufficient access rights
+  /files/{file_id}:
     get:
-      operationId: get_single_file
-      tags:
-        - Files
       summary: Get a specific file
       description: Get one specific file by its id
       security:
         - Bearer: []
+      operationId: get_single_file
+      tags:
+        - files
       parameters:
-        - name: id
+        - name: file_id
           in: path
           description: Id of the file
           type: integer
           required: True
+        - name: usertoken
+          in: header
+          description: authentication token of user
+          required: true
+          type: string
       responses:
         200:
           description: Successfully found and delievered file
@@ -108,47 +176,63 @@ paths:
               size:
                 type: integer
               upload_date:
-                type: "string"
-                format: "date-time"
+                type: string
+                format: date-time
               id:
                 type: integer
               user:
                 type: string
+              shared_with:
+                type: array
+                items:
+                  type: integer
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden- insufficient access rights
         404:
-          description: "Not Found: http://.../{id}"
+          description: Not found
 
 
     delete:
-      operationId: delete_file
-      tags:
-        - Files
       summary: Delete a File
       description: Delete a File by its id
       security:
         - Bearer: []
+      operationId: delete_file
+      tags:
+        - files
       parameters:
-        - name: id
+        - name: file_id
           in: path
           type: integer
           required: True
+        - name: userid
+          in: header
+          description: authentication token of user
+          required: true
+          type: string
       responses:
         200:
           description: Successfully deleted a file from db
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden- insufficient access rights
         404:
-          description: "Not Found: http://.../{id}"
+          description: Not found
 
     patch:
+      summary: Change a files content or the users it is shared with.
+      description: Upload the new content to an existing file or change which users can access it.
+      security:
+        - Bearer: []
       operationId: change_filename_and_shared
       tags:
         - files
       consumes:
         - application/json
       parameters:
-        - name: id
-          in: path
-          description: Id of the file
-          type: integer
-          required: True
         - name: userid
           in: header
           description: user id
@@ -166,27 +250,62 @@ paths:
               name:
                 type: string
               shared_with:
-                  type: array
-                  items:
-                    type: integer
+                type: array
+                items:
+                  type: integer
           required: True
       responses:
-          200:
-            description: Successfully changed file
-            schema:
-              properties:
-                name:
-                  type: string
-                size:
+        200:
+          description: Successfully changed file
+          schema:
+            properties:
+              name:
+                type: string
+              size:
+                type: integer
+              upload_date:
+                type: string
+              id:
+                type: integer
+              user:
+                type: string
+              shared_with:
+                type: array
+                items:
                   type: integer
-                upload_date:
-                  type: string
-                id:
-                  type: integer
-                user:
-                  type: string
-          400:
-            description: Missing file object
-          403:
-            description: Unauthorized
+        400:
+          description: Missing/empty file object
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden- insufficient access rights
+        404:
+          description: Not found
 
+  /files/{id}/download:
+    get:
+      summary: Downloads the file
+      description: Get the content of the file as provided by flask.send_file.
+      security:
+        - Bearer: []
+      operationId: get_download
+      tags:
+        - files
+      parameters:
+        - name: id
+          in: path
+          description: Id of the file
+          type: integer
+          required: True
+        - name: usertoken
+          in: header
+          description: authentication token of user
+          required: true
+          type: string
+      responses:
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden- insufficient access rights
+        404:
+          description: Not found
